steam: fix stuff - button spacing in Settings > Storage - remove download progress circle & make the progress text gray - remove background on game entry hover - (re?)style console - screenshot manager header position - main window titlebar not being draggable - tooltip font size

--- a/src/steam/imports/contentmanagement.styl
+++ b/src/steam/imports/contentmanagement.styl
@@ -5,6 +5,10 @@
 	z-index: 1;
 }
 
+#AppActionBarButtons {
+	gap: var(--dialog-button-spacing);
+}
+
 #AppActionSelected {
 	@extend $text-reset;
 
