--- a/src/steam/imports/screenshotmanagerdialog.styl
+++ b/src/steam/imports/screenshotmanagerdialog.styl
@@ -126,6 +126,10 @@ replace-text(token) {
 	@extend $text-reset;
 }
 
+#HeaderPaddingTop {
+	transform: unset;
+}
+
 #IconButton {
 	#ButtonGroup:nth-child(2) & {
 		replace-text(ScreenshotUploader_Settings);
