--- a/src/steam/imports/steamdesktop.styl
+++ b/src/steam/imports/steamdesktop.styl
@@ -1,6 +1,18 @@
 #Wrapper {
 	background-color: transparent;
 	border: none;
+
+	&::before {
+		content: '';
+
+		position: fixed;
+		top: calc(var(--border-size) + var(--window-spacing));
+		left: calc(var(--border-size) + var(--window-spacing));
+		width: calc(100% - var(--titlebar-spacing) * 2 - var(--icon-size) - 88px);
+		height: var(--titlebar-height);
+
+		app-region: drag;
+	}
 }
 
 #FocusBar,
