--- a/src/steam/imports/tooltip.styl
+++ b/src/steam/imports/tooltip.styl
@@ -1,5 +1,6 @@
 #TextToolTip {
 	@extend .tooltip;
 
+	font-size: var(--text-ui-size);
 	box-shadow: none;
 }
