--- a/src/steam/steam.styl
+++ b/src/steam/steam.styl
@@ -70,6 +70,13 @@ $pageable-container-button {
 	}
 }
 
+// TODO: build.js replaces colors with normal classes, too
+:root {
+	--darkred: #800;
+	--darkyellow: #880;
+	--darkblue: #008;
+}
+
 body {
 	@extend .window;
 }
